# run_pvz

./: .gitignore  2026_0223_current.md  CMakeLists.txt  Fixing PvZ Emulator Crash.md  README.md  api_compiler.py  api_context.hpp  api_handler.cpp  api_handler.hpp  api_handler.py  api_handler_known_dispatch.inl  cpu_backend_compat.hpp  disasm.py  dump_addrs.py  dump_code2.py  dump_code4.py  flags.hpp  import_handler.hpp  llm_compiler.py  main.cpp  parse_trace.py  pe_loader.cpp  pe_loader.hpp  prototype_lva.py  sanitize_mocks.py  temp.txt  temp_prompt_0x5bd875.txt  temp_prompt_0x62a3e1.txt  temp_prompt_api_CreateFileA.txt  temp_prompt_api_CreateMutexA.txt  temp_prompt_api_Direct3DCreate8.txt  temp_prompt_api_FindFirstFileA.txt  temp_prompt_api_GetActiveWindow.txt  temp_prompt_api_RegCreateKeyExA.txt  temp_prompt_api_mixerOpen.txt  temp_prompt_api_mixerSetControlDetails.txt  temp_prompt_api_timeGetTime.txt  track_esp.py  virtual_cpu.cpp  virtual_cpu.hpp  (+7 more)
analysis/disasm/: 2026-02-26_bootstrap_hotspot_notes.md  pvz_main_gate_probe_0x5a1640.asm  pvz_main_helper_0x456610.asm  (+15 more)
api_impl/: GetSystemTimeAsFileTime.cpp
api_mocks/: BASS_Init.cpp  CorExitProcess.cpp  CreateCursor.cpp  CreateEventA.cpp  CreateFileA.cpp  CreateFileMappingA.cpp  CreateFontA.cpp  CreateMutexA.cpp  CreateThread.cpp  Direct3DCreate8.cpp  DirectDrawCreateEx.cpp  DirectSoundCreate.cpp  EnterCriticalSection.cpp  EnumSystemLocalesA.cpp  FileTimeToSystemTime.cpp  FindFirstFileA.cpp  FlsAlloc.cpp  FlsSetValue.cpp  FreeEnvironmentStringsW.cpp  GetACP.cpp  GetActiveWindow.cpp  GetCPInfo.cpp  GetCommandLineA.cpp  GetCurrentDirectoryW.cpp  GetCurrentProcess.cpp  GetDesktopWindow.cpp  GetEnvironmentStringsW.cpp  GetFileTime.cpp  GetFileType.cpp  GetFileVersionInfoSizeA.cpp  GetLocaleInfoA.cpp  GetModuleHandleA.cpp  GetProcAddress.cpp  GetStdHandle.cpp  GetStringTypeW.cpp  GetSystemDirectoryA.cpp  GetSystemMetrics.cpp  HeapReAlloc.cpp  HeapSize.cpp  IDirectDraw7_Method_0.cpp  (+35 more)
api_requests/: BASS_Init.json.processed  CorExitProcess.json.processed  CreateCursor.json.processed  CreateEventA.json.processed  CreateFileA.json  CreateFileMappingA.json  CreateFontA.json  CreateMutexA.json  CreateThread.json.processed  Direct3DCreate8.json  DirectDrawCreateEx.json  DirectSoundCreate.json  EnterCriticalSection.json.processed  EnumSystemLocalesA.json.processed  FileTimeToSystemTime.json  FindFirstFileA.json  FlsAlloc.json.processed  FlsSetValue.json.processed  FreeEnvironmentStringsW.json.processed  GetACP.json.processed  GetActiveWindow.json  GetCPInfo.json.processed  GetCommandLineA.json.processed  GetCurrentDirectoryW.json  GetCurrentProcess.json  GetDesktopWindow.json  GetEnvironmentStringsW.json.processed  GetFileTime.json  GetFileType.json.processed  GetFileVersionInfoSizeA.json.processed  GetLocaleInfoA.json  GetLocaleInfoA.json.processed  GetProcAddress.json.processed  GetStdHandle.json.processed  GetStringTypeW.json.processed  GetSystemDirectoryA.json  GetSystemMetrics.json.processed  HeapReAlloc.json.processed  HeapSize.json.processed  IDirectDraw7_Method_0.json  (+33 more)
backend/: cpu_backend.hpp  fexcore_backend.cpp  fexcore_backend.hpp  unicorn_backend.cpp  unicorn_backend.hpp
bridge/: pvz_fexcore_bridge.cpp
jit_requests/: block_0x403e20.json  block_0x403e38.json.processed  block_0x403e47.json  block_0x403e6a.json  block_0x403e74.json.processed  block_0x403e7b.json.processed  block_0x403e87.json  block_0x403e89.json  block_0x403e8b.json  block_0x403e91.json  block_0x403e96.json.processed  block_0x403e9a.json  block_0x403eb1.json  block_0x403ec0.json.processed  block_0x403ec3.json  block_0x403ece.json  block_0x403ed2.json  block_0x403ed4.json  block_0x403edf.json  block_0x403eeb.json  block_0x403eed.json  block_0x403f00.json  block_0x403f13.json  block_0x403f20.json  block_0x403f22.json  block_0x403f26.json.processed  block_0x403f32.json  block_0x403f3f.json.processed  block_0x403f44.json  block_0x403f4b.json  block_0x403f62.json  block_0x403f73.json  block_0x403f7b.json  block_0x404080.json  block_0x4040b7.json  block_0x4040cb.json  block_0x4040d6.json  block_0x4040d9.json  block_0x4040eb.json  block_0x40411d.json  (+2067 more)
tools/: probe_fexcore.sh  run_pvz_wine.sh
work_logs/: 2026-02-21_refactoring.md  2026-02-22_crt_boot_loop_debugging.md  2026-02-23_libfexcore_migration_strategy.md  2026-02-23_pvz_macos_boot_progress.md  2026-02-24_coop_gui_progress.md  2026-02-24_thread_mocking_logic.md  2026-02-25_temp_workarounds_backlog.md  2026-02-26_wine_probe.md  CRT Boot Loop Debugging.md  architecture_korean.md  master_plan.md
(+11 files in other folders)
